--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,6 +21,12 @@ body{
     line-height: normal;
     margin: 0;
     padding: 0;
+    min-height: 100vh;
+    width: 100vw;
+}
+
+body.no-scroll {
+    overflow: hidden;
 }
 * {
     box-sizing: border-box;
